--- a/archives/zhihu-search/2024-02-06.md
+++ b/archives/zhihu-search/2024-02-06.md
@@ -1,14 +1,17 @@
 # 2024-02-06
 
-共 10 条
+共 13 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Tue Feb 06 2024 14:07:15 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 06 2024 15:00:39 GMT+0800 (China Standard Time) -->
+1. [AI变脸冒充CFO骗走两个亿](https://www.zhihu.com/search?q=AI变脸冒充CFO骗走两个亿)
+1. [A股市场](https://www.zhihu.com/search?q=A股市场)
 1. [申论课程哪个老师好](https://www.zhihu.com/search?q=申论课程哪个老师好)
 1. [国考怎么准备](https://www.zhihu.com/search?q=国考怎么准备)
 1. [写作真的能赚钱吗](https://www.zhihu.com/search?q=写作真的能赚钱吗)
 1. [定向选调生](https://www.zhihu.com/search?q=定向选调生)
 1. [考公流程](https://www.zhihu.com/search?q=考公流程)
+1. [人的意识究竟是怎么产生的](https://www.zhihu.com/search?q=人的意识究竟是怎么产生的)
 1. [法硕非法学](https://www.zhihu.com/search?q=法硕非法学)
 1. [选调生报名基本条件](https://www.zhihu.com/search?q=选调生报名基本条件)
 1. [非全日制](https://www.zhihu.com/search?q=非全日制)
